<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exam</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Login to start Test</string>
    <string name="title_activity_questions">Questions</string>
    <string name="Test">&lt;Questions displayed here&gt;</string>
    <string name="nextButton">&gt;&gt;</string>
    <string name="prevButton">&lt;&lt;</string>
    <string name="rButton">Option</string>
    <string name="submitBtn">Submit</string>
    <string name="timerDef">00:00</string>
    <string name="title_activity_activity_submit">Submit</string>
    <string name="submit_button">Submit</string>
    <string name="submit_content">Click \'Submit\' to\nsubmit answers</string>
    <string name="title_question_list">Questions</string>
    <string name="title_question_detail">Question Detail</string>
    <string name="reviewCheck">Mark for Review</string>
    <string name="clear"><u>Clear Answer</u></string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="done_button">Done</string>

</resources>